Fixes canvas alignment for small scale and scale adjustment after Cmd+0

--- a/web/viewer.css
+++ b/web/viewer.css
@@ -1102,7 +1102,7 @@ html[dir='rtl'] .outlineItem > a {
 }
 
 canvas {
-  margin: auto;
+  margin: 0;
   display: block;
 }
 
